final text updates

--- a/ChestXRAY/src/chestxray_trainig.ipynb
+++ b/ChestXRAY/src/chestxray_trainig.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4f7f80fe",
+   "id": "24bf88be",
    "metadata": {},
    "source": [
     "## Integrares do grupo  - T10 Paulista\n",
@@ -39,10 +39,10 @@
     "\n",
     "## Documentação base\n",
     "\n",
-    " *OBS: alguns comentários são adicionados no decorre do código para explica/auxiliar no entendimento do respectivo trecho\n",
+    " **OBS:** *alguns comentários são adicionados no decorre do código para explica/auxiliar no entendimento do respectivo trecho*\n",
     "\n",
     "### Mudança no layout\n",
-    "O nome dos direórios assim como o nome das imagens foram alterados/ajustadas para ficar com a estrutura mais limpa e organizada facilitando o uso no ao ser manipuladas no Python.\n",
+    "O nome dos diretórios, assim como o nome das imagens foram alterados/ajustadas para ficar com a estrutura mais limpa e organizada facilitando o uso ao ser manipulados no Python.\n",
     "\n",
     "\n",
     "![layout_dir.png](attachment:layout_dir.png)\n",
@@ -58,7 +58,7 @@
     "### Hyperparamtros\n",
     "\n",
     "\n",
-    "Valor referente ao tamanho de das imagens (para processamento)\n",
+    "Valor referente ao tamanho das imagens (para processamento)\n",
     "+ **imageSize = 224**\n",
     "\n",
     "Coeficiente inicial para calcular do Stochastic Gradient Descendent 1e-4 = 0.0001\n",
@@ -81,8 +81,7 @@
     "\n",
     "### Array de ordenação das classes a nivel do Python\n",
     "\n",
-    "A classes (**NORMAL**, **PNEUMONIA BACTERIA** E **PNEUMONIA VIRAL**) no que refere-se a classificação segue com a seguinte ordenação (*Array Python*)\n",
-    "\n"
+    "No que refere-se a classificação segue com a ordenação (*Array Python*) **NORMAL**, **PNEUMONIA BACTERIA** E **PNEUMONIA VIRAL**\n"
    ]
   },
   {
@@ -144,7 +143,7 @@
    "source": [
     "### Confusion Matrix\n",
     "\n",
-    "A matriz de confusão gerada a partir dos dados do modelo revela que a capacidade de predição do modelo para a classe **NORMAL** é quase 100%, na contra mão dessa perfomance, predição da classe **VIRAL** tem um alto indice de erros associados a classe *BACTERIA*, por fim a classe **BACTERIA** tem uma boa performance."
+    "A matriz de confusão gerada revela que a capacidade de predição do modelo para a classe **NORMAL** beira os 98%, na contra mão dessa perfomance, predição da classe **VIRAL** tem um alto indice de erros associados a classe *BACTERIA*, uma possível causa para esse problema pode ser o nivel de ruido das imagens outo ponto que vale ressaltar é tamanho do dataset (*talvez um número maior de imagens poderia influenciar de forma positiva na predição do modelo*), por fim a classe **BACTERIA** tem uma boa performance."
    ]
   },
   {
@@ -224,7 +223,7 @@
     "\n",
     "O processo de classificação esta organizado em alguns metodos Python, abaixo será descriminado a função de cada um deles.\n",
     "\n",
-    "O método abaixo **classification()** recebe a imagem a ser processada, faz a classificação e formata o resultado final é expoe como saida do processamento.\n",
+    "O método abaixo **classification()** recebe a imagem a ser processada, faz a classificação, formata o resultado final e expoe como saida do processamento.\n",
     "Esse ciclo ocorre para cada imagem lida nos diretórios das classes (*NORMAL, BACTERIA E VIRAL*)"
    ]
   },
@@ -272,7 +271,7 @@
    "id": "7aa96279",
    "metadata": {},
    "source": [
-    "Quanto ao método **get_images_validation()** ele é responsável por obter cada imagem dos diretórios de cada classe e repassa-lo para o metodo **classification()**, isso gatante que cada imagem será lida de acordo com o respectivo diretório."
+    "Quanto ao método **get_images_validation()** ele é responsável por obter cada imagem dos diretórios de cada classe e repassa-lo para o metodo **classification()**, isso garante que cada imagem será lida de acordo com o respectivo diretório."
    ]
   },
   {
@@ -294,7 +293,7 @@
    "id": "1b2cc2ad",
    "metadata": {},
    "source": [
-    "Por fim o metodo **get_dir_validation()** capitura e seguimenta a chamada de cada diretório."
+    "Por fim o metodo **get_dir_validation()** captura e seguimenta a chamada de cada diretório."
    ]
   },
   {
@@ -1254,13 +1253,13 @@
     "Foi escolhido o mobileNet2 (Keras/Tensorflow), ela uma rede CNN que tem como caracteristica promover uma melhor performance quando é utilizanda em dispositivos moveis, isso pensando na capacidade limitade de um dispositivo movel\n",
     "se comparado a de um servidor.\n",
     "\n",
-    "A MobileNetV2 e baseada em inverted residual structure de modo que as conexoes residual esta entre as camadas bottleneck layers.\n",
+    "A MobileNetV2 e baseada em inverted residual structure de modo que as conexoes residuais estajam entre as camadas bottleneck layers.\n",
     "\n",
     "As camadas de expansões intermediarias utilizam convoluções lightweight e  depthwise  para filtrar os recursos do não-lineares, por definição a arquitetura da MobileNetV2 contem a camada inicial de convolução com 32 filtros seguido por 19 residuals bottleneck layers\n",
     "\n",
     "https://arxiv.org/abs/1801.04381\n",
     "\n",
-    "A implementação abaixo, define/Carrega a arquitetura(parametros) base da rede, de modo que o re-shape das imagens seguem o padrão de tamanho 224x224 pixels, com pool_size de 3x3, 128 neurônios em sua camada mais profunda, dropout de 20% (ou seja o neurônio que atigind um peso abaixo de 20% não será enviado para a próxima camada), por fim, definimos 3 neurônios/classses de saída\n",
+    "A implementação abaixo, define/Carrega a arquitetura(parâmetros) base da rede, de modo que o re-shape das imagens seguem o padrão de tamanho 224x224 pixels, com pool_size de 3x3, 128 neurônios em sua camada mais profunda, dropout de 20% (ou seja o neurônio que atingir um peso abaixo de 20% não será enviado para a próxima camada), por fim, definimos 3 neurônios/classses de saída\n",
     "\n"
    ]
   },
@@ -1459,7 +1458,7 @@
    "id": "fe233fdd",
    "metadata": {},
    "source": [
-    "#### Bloco principal no qual contém constantes e a chamada do método que iniciar o ciclo de treinament, geração do modelo final de classificação\n"
+    "### Bloco principal no qual contém constantes e a chamada do método que iniciar o ciclo de treinament, geração do modelo final de classificação\n"
    ]
   },
   {
@@ -1584,6 +1583,44 @@
     "\n",
     "    training(imagePaths, imageSize, data, labels)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0bc366df",
+   "metadata": {},
+   "source": [
+    "## SEARCH\n",
+    "### Links gerais\n",
+    "https://towardsdatascience.com/review-resnet-winner-of-ilsvrc-2015-image-classification-localization-detection-e39402bfa5d8\n",
+    "\n",
+    "https://www.hindawi.com/journals/mpe/2021/3366057/\n",
+    "\n",
+    "https://www.radiologymasterclass.co.uk/gallery/galleries\n",
+    "\n",
+    "https://www.kaggle.com/c/siim-acr-pneumothorax-segmentation/discussion/98498\n",
+    "\n",
+    "https://www.tensorflow.org/tutorials/keras/classification#import_the_fashion_mnist_dataset\n",
+    "\n",
+    "### R-CNN\n",
+    "https://www.tensorflow.org/api_docs/python/tf/keras/applications/resnet/ResNet152\n",
+    "\n",
+    "### GitHub\n",
+    "https://github.com/omrifried/RSNA-Chest-X-Ray-Faster-RCNN/blob/main/rsna-pneumonia-faster-rcnn-detection.ipynb\n",
+    "\n",
+    "https://github.com/arindam93/Chest-X-ray-Disease-Diagnosis-using-Faster-R-CNN\n",
+    "\n",
+    "https://github.com/Vedant-S/Mask-RCNN_Instance-Segmentation\n",
+    "\n",
+    "https://github.com/WenQingLee/maskrcnn-xray"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41a0b517",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
