Update a wrong text at top of Notebook

--- a/ChestXRAY/src/chestxray_finalwork.ipynb
+++ b/ChestXRAY/src/chestxray_finalwork.ipynb
@@ -5,7 +5,7 @@
    "id": "24bf88be",
    "metadata": {},
    "source": [
-    "## Integrares do grupo  - T10 Paulista\n",
+    "## Integrantes do grupo  - T10 Paulista\n",
     "\n",
     "> Amauri Silva **Matrícula:** A58330068\n",
     "\n",
