Update the text instruction to set up the environment + docString on project

--- a/JupyterNotebook/ChestXRAY/notebook/chestxray_classifier.ipynb
+++ b/JupyterNotebook/ChestXRAY/notebook/chestxray_classifier.ipynb
@@ -10,11 +10,18 @@
    "id": "d03aecbb",
    "metadata": {},
    "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "---\n",
     "\n",
-    "## ChestXRAY Model - Desenvolvimento utilizando CNN \n",
     "\n",
-    "### Objetivo\n",
+    "# ChestXRAY Model project - Development based on CNN (Convolutional Neural Network)\n",
+    "### Supervised Learning approach\n",
+    "\n",
+    "### Goal\n",
     "O objetivo do trabalho é criar uma rede neural convolucional que seja capaz de classificar imagens de\n",
     "Raio X em ‘**normal**’, ‘**pneumonia bacterial**’ ou ‘**pneumonia viral**’.\n",
     "\n",
@@ -150,12 +157,17 @@
     "---\n",
     "\n",
     "\n",
-    "## Excução da rede \n",
+    "# Pre set up\n",
     "\n",
-    "### Pre requisito\n",
+    "**1. Open the terminal (this set up was made on Ubuntu 22).**\n",
     "\n",
-    "Instalar as bibliotecas executando seguinte comando\n",
+    "**2. create the virtual environment.**\n",
+    "+ python3 -m venv venv\n",
     "\n",
+    "**3. Activate the virtual environment.**\n",
+    "+ source venv/bin/activate\n",
+    "\n",
+    "**4. Install all lib dependences running the command below.**\n",
     "+ pip install -r requirements.txt"
    ]
   },
